Updated README with Maven and JVM instructions.